--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,62 +1,23 @@
-name: CI
-
+name: Build & Deploy Frontend
 on:
   push:
     branches:
       - main
-  release:
-    types:
-      - created
-  pull_request:
-    branches:
-      - main
 jobs:
-  run-linters:
-    name: Lint & Jest
+  deploy:
     runs-on: ubuntu-latest
-    steps:
-      - name: Check out Git repository
-        uses: actions/checkout@v2
-      - name: Set up Node.js
-        uses: actions/setup-node@v1
-        with:
-          node-version: 20.x
-      - name: Get yarn cache directory path
-        id: yarn-cache-dir-path
-        run: echo "::set-output name=dir::$(yarn cache dir)"
 
-      - uses: actions/cache@v3
-        id: yarn-cache
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
         with:
-          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
-          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-yarn-
+          node-version: "20"
+
       - name: Install dependencies
-        run: yarn --prefer-offline
-      - name: Run linters
-        run: yarn lint
-  build:
-    runs-on: ubuntu-latest
-    name: Build and Test
-    steps:
-      - uses: actions/checkout@v2
-        name: Check out repository
-      - uses: actions/setup-node@v1
-        name: Set up Node.js
-        with:
-          node-version: 20.x
-      - run: npm run build
-  test:
-    runs-on: ubuntu-latest
-    name: Run Jest
-    steps:
-      - uses: actions/checkout@v2
-        name: Check out repository
-      - uses: actions/setup-node@v1
-        name: Set up Node.js
-        with:
-          node-version: 20.x
-      - run: npm ci
-      - run: npm run build --if-present
-      - run: npm test
+        run: npm install
+
+      - name: Build the project
+        run: npm run build
