--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,23 +1,30 @@
-name: Build & Deploy Frontend
+name: Next.js app CI/CD
+
 on:
   push:
     branches:
       - main
+  pull_request:
+    branches:
+      - main
+
 jobs:
-  deploy:
+  NextJS-Tests:
+    name: Next.js app CI/CD
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Set up Node.js
+      - name: Setup Node.js
         uses: actions/setup-node@v2
         with:
           node-version: "20"
 
       - name: Install dependencies
-        run: npm install
+        run: |
+          npm install
 
-      - name: Build the project
-        run: npm run build
+      - name: Run Jest tests
+        run: npm test
