--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,12 @@ jobs:
 
       - name: Install dependencies
         run: |
-          npm install
+          yarn install --frozen-lockfile
+
+      - name: Build
+        run: yarn build
 
       - name: Run Jest tests
-        run: npm test
+        run: |
+          yarn upgrade
+          yarn test:ci
